--- a/index.css
+++ b/index.css
@@ -48,6 +48,7 @@
 }
 /* player end*/
 
+/* clock */
 #clock_frame {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
@@ -61,3 +62,4 @@
 #clock_data {
   font-size: 80px;
 }
+/* clock end */
