--- a/index.css
+++ b/index.css
@@ -4,25 +4,42 @@
   grid-template-columns: 35vw 1fr;
 }
 
-#icons {
+.panel {
+  margin: 0.5%;
+}
+
+#icons_panel {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
   background: #f88;
 }
 
 /* player */
-#player {
+#player_panel {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   background: #8f8;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#player {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+
+  margin-inline: 5%;
+  padding: 3%;
+  border-radius: 20px;
+  background: blueviolet;
 }
+
 #thumbnail_frame {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
+
+  border-radius: 10px 0px 0px 10px;
   background: white;
 
   display: flex;
@@ -32,9 +49,12 @@
 #thumbnail {
   width: 20vw;
 }
+
 #indicator {
   grid-row: 1 / 3;
   grid-column: 2 / 3;
+
+  border-radius: 0px 10px 10px 0px;
   background: yellow;
 
   display: flex;
@@ -49,7 +69,7 @@
 /* player end*/
 
 /* clock */
-#clock_frame {
+#clock_panel {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   background: #88f;
