--- a/index.css
+++ b/index.css
@@ -73,13 +73,30 @@
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   background: #88f;
+}
+
+#clock {
+  margin: 10%;
+  padding: 3%;
+  border-radius: 20px;
+  background: orange;
 
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
-#clock_data {
+.clock_elm {
+  width: 100vb;
+  text-align: center;
+}
+
+#clock_date {
+  font-size: 20px;
+}
+
+#clock_time {
   font-size: 80px;
 }
 /* clock end */
