--- a/index.css
+++ b/index.css
@@ -30,8 +30,6 @@
   grid-template-columns: 1fr 1fr;
 
   margin-inline: 5%;
-  padding: 3%;
-  border-radius: 20px;
   background: blueviolet;
 }
 
@@ -39,7 +37,12 @@
   grid-row: 1 / 3;
   grid-column: 1 / 2;
 
-  border-radius: 10px 0px 0px 10px;
+  border: solid;
+  border-width: 6px;
+  border-right: 0px;
+  border-radius: 20px 0px 0px 20px;
+  border-color: palevioletred;
+
   background: white;
 
   display: flex;
@@ -54,7 +57,12 @@
   grid-row: 1 / 3;
   grid-column: 2 / 3;
 
-  border-radius: 0px 10px 10px 0px;
+  border: solid;
+  border-width: 6px;
+  border-left: 0px;
+  border-radius: 0px 20px 20px 0px;
+  border-color: palevioletred;
+
   background: yellow;
 
   display: flex;
@@ -79,6 +87,9 @@
   margin: 10%;
   padding: 3%;
   border-radius: 20px;
+  border: solid;
+  border-width: 6px;
+  border-color: palevioletred;
   background: orange;
 
   display: flex;
