--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@
   border-radius: 20px 0px 0px 20px;
   border-color: palevioletred;
 
-  background: white;
+  background: yellowgreen;
 
   display: flex;
   align-items: center;
@@ -72,6 +72,7 @@
 }
 .indicator_elm {
   font-size: 20px;
+  font-family: "Nico Moji", monospace;
   width: 50vb;
 }
 /* player end*/
@@ -101,6 +102,7 @@
 .clock_elm {
   width: 100vb;
   text-align: center;
+  font-family: "Nico Moji", monospace;
 }
 
 #clock_date {
