--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@
 }
 .indicator_elm {
   font-size: 20px;
-  font-family: "Nico Moji", monospace;
+  font-family: "Nico Moji", "Zen Maru Gothic", monospace;
   width: 50vb;
 }
 /* player end*/
