--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #container {
   display: grid;
   grid-template-rows: 50vh 50vh;
-  grid-template-columns: 35vw 1fr;
+  grid-template-columns: 20vw 1fr;
 
   background-image: url("./background/01.jpg");
   background-position: center center;
@@ -16,16 +16,31 @@
 }
 
 #icons_panel {
+  margin-left: 0px;
+  margin-top: 0px;
+  background: repeating-linear-gradient(
+    -45deg,
+    rgba(0, 0, 0, 0.2), 
+    rgba(0, 0, 0, 0.2) 20px,
+    rgba(0, 0, 0, 0.3) 20px,
+    rgba(0, 0, 0, 0.3) 40px
+  );
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+
+  border: solid;
+  border-width: 2px;
+  border-radius: 0px 20px;
+
   grid-row: 1 / 3;
   grid-column: 1 / 2;
-  background: #f88;
 }
 
 /* player */
 #player_panel {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
-  background: #8f8;
+  background: transparent;
 
   display: flex;
   align-items: center;
@@ -34,10 +49,9 @@
 #player {
   display: grid;
   grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
 
-  margin-inline: 5%;
-  background: blueviolet;
+  margin-inline: 10%;
 }
 
 #thumbnail_frame {
@@ -45,16 +59,21 @@
   grid-column: 1 / 2;
 
   border: solid;
-  border-width: 6px;
-  border-right: 0px;
+  border-width: 2px;
   border-radius: 20px 0px 0px 20px;
-  background: yellowgreen;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
 
   display: flex;
   align-items: center;
   justify-content: center;
 }
 #thumbnail {
+  object-fit: cover;
+  filter: opacity(90%);
+
+  border-radius: 20px;
   padding: 2%;
   height: 25vh;
 }
@@ -64,18 +83,30 @@
   grid-column: 2 / 3;
 
   border: solid;
-  border-width: 6px;
+  border-width: 2px;
   border-left: 0px;
   border-radius: 0px 20px 20px 0px;
 
-  background: yellow;
+  background: repeating-linear-gradient(
+    -45deg, 
+    rgba(0, 0, 0, 0.2), 
+    rgba(0, 0, 0, 0.2) 20px, 
+    rgba(0, 0, 0, 0.3) 20px, 
+    rgba(0, 0, 0, 0.3) 40px
+  );
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
+#indicator_title {
+  font-size: 50px;
+}
 .indicator_elm {
+  color: azure;
   font-size: 20px;
   font-family: "Nico Moji", "Zen Maru Gothic", monospace;
   width: 50vb;
@@ -91,7 +122,15 @@
 #clock {
   margin: 10%;
   padding: 3%;
-  background-color: rgba(0, 0, 0, 0.2);
+
+  background: repeating-linear-gradient(
+    -45deg, 
+    rgba(0, 0, 0, 0.2), 
+    rgba(0, 0, 0, 0.2) 20px, 
+    rgba(0, 0, 0, 0.3) 20px, 
+    rgba(0, 0, 0, 0.3) 40px
+  );
+  background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
 
   border-radius: 20px;
