--- a/index.css
+++ b/index.css
@@ -20,10 +20,10 @@
   margin-top: 0px;
   background: repeating-linear-gradient(
     -45deg,
-    rgba(0, 0, 0, 0.2), 
-    rgba(0, 0, 0, 0.2) 20px,
-    rgba(0, 0, 0, 0.3) 20px,
-    rgba(0, 0, 0, 0.3) 40px
+    rgba(0, 0, 0, 0.1), 
+    rgba(0, 0, 0, 0.1) 20px,
+    rgba(0, 0, 0, 0.0) 20px,
+    rgba(0, 0, 0, 0.0) 40px
   );
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
@@ -31,6 +31,7 @@
   border: solid;
   border-width: 2px;
   border-radius: 0px 20px;
+  border-left: 0px;
 
   grid-row: 1 / 3;
   grid-column: 1 / 2;
@@ -89,10 +90,10 @@
 
   background: repeating-linear-gradient(
     -45deg, 
-    rgba(0, 0, 0, 0.2), 
-    rgba(0, 0, 0, 0.2) 20px, 
-    rgba(0, 0, 0, 0.3) 20px, 
-    rgba(0, 0, 0, 0.3) 40px
+    rgba(0, 0, 0, 0.1), 
+    rgba(0, 0, 0, 0.1) 20px, 
+    rgba(0, 0, 0, 0.0) 20px, 
+    rgba(0, 0, 0, 0.0) 40px
   );
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
@@ -120,15 +121,16 @@
 }
 
 #clock {
+  height: 25vh;
   margin: 10%;
   padding: 3%;
 
   background: repeating-linear-gradient(
-    -45deg, 
-    rgba(0, 0, 0, 0.2), 
-    rgba(0, 0, 0, 0.2) 20px, 
-    rgba(0, 0, 0, 0.3) 20px, 
-    rgba(0, 0, 0, 0.3) 40px
+    -45deg,
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0.1) 20px,
+    rgba(0, 0, 0, 0.0) 20px,
+    rgba(0, 0, 0, 0.0) 40px
   );
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
